Doplneni prvku pro spravu do sablony pro moje upozorneni a poznamky

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -92,6 +92,10 @@
 .select-button-up-i {
   .icon(@fa-var-caret-right, "s");
 }
+
+.calendar-i {
+  .icon(@fa-var-calendar-alt, "d");
+}
 // END formulare
 
 // START uvodni stranka
