--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -30,12 +30,14 @@
 @import "vendors/_reset";
 @import "vendors/_normalize";
 @import "vendors/_fontawesome";
+@import "vendors/_datepickk";
 
 
 /*
   VENDOR EXTENSIONS
     * Změny pro pomocné knihovny a nástroje
 */
+@import "vendor-extensions/_datepickk";
 
 
 /*
@@ -57,6 +59,7 @@
 @import "layout/_footer";
 @import "layout/_forms";
 @import "layout/_tables";
+@import "layout/_alerts";
 
 
 /*
@@ -66,7 +69,6 @@
 @import "components/_buttons";
 @import "components/_helper-bars";
 @import "components/_headings";
-@import "components/_alerts";
 @import "components/_icons";
 @import "components/_links";
 @import "components/_school";
