--- a/src-front/less/pages/_my-reminders-and-notes.less
+++ b/src-front/less/pages/_my-reminders-and-notes.less
@@ -22,6 +22,7 @@
         .date {
           display: block;
           width: 5em;
+          .uppercase();
         }
 
         .record-container {
