--- a/src-front/less/utils/vars/_color.less
+++ b/src-front/less/utils/vars/_color.less
@@ -2,10 +2,12 @@
 @dark-yellow: #F3D452;
 @light-yellow: #FFE252;
 @dark-green: #84ADAA;
+@middle-green: #A5BFBB;
 @light-green: #D4DDDD;
 @red: #F08693;
 @light-grey: #EEE9E5;
 @dark-grey: #A7A5A6;
+@alert-background-color: #999999;
 @black: #5E5E5F;
 @white: white;
 // END barvy
@@ -22,6 +24,7 @@
 @main-heading-c: @dark-green;
 @box-heading-c: @dark-yellow;
 @intro-heading-c: @dark-green;
+@alert-heading-c: @dark-grey;
 // END nadpisy
 
 
