--- a/src-front/less/utils/vars/_size.less
+++ b/src-front/less/utils/vars/_size.less
@@ -21,6 +21,7 @@
 @main-heading-f-s: @font-s + .5em;
 @box-heading-f-s: @font-s + .5em;
 @intro-heading-f-s: @font-s + .5em;
+@alert-heading-f-s: @font-s + .3em;
 // END fonty
 
 // START formulare
