--- a/src-front/less/utils/vars/_z-index.less
+++ b/src-front/less/utils/vars/_z-index.less
@@ -1,5 +1,7 @@
-// Nejvyssi je 10 -> prekryvani obsahu (vyskakovaci hlasky apod.)
+// Nejvyssi je 10 -> prekryvani obsahu (vyskakovaci hlasky apod.) -> obsah má samozřejmě ještě o 1 vyšší
 // Potom je 9 -> menu
 // Zbytek je dle potreby
+@alert-box-zi: 11;
 @alert-zi: 10;
 @menu-zi: 9;
+@mini-alert-zi: 8;
