--- a/src-front/less/base/_base.less
+++ b/src-front/less/base/_base.less
@@ -16,5 +16,9 @@ body {
   color: @text-c;
   display: flex;
   flex-direction: column;
+
+  &.active-alert {
+    overflow: hidden;
+  }
 }
 // END obecne
