--- a/src-front/less/components/_buttons.less
+++ b/src-front/less/components/_buttons.less
@@ -21,12 +21,18 @@
     margin-left: 2em;
   }
 
+  &:hover {
+    background: shade(@light-grey, 2%);
+  }
+
   &.secondary {
     background: @white;
   }
 
-  &:hover {
-    background: shade(@light-grey, 2%);
+  &.alert {
+    color: @dark-grey;
+    padding-top: .1em;
+    padding-bottom: .1em;
   }
 }
 
