--- a/src-front/less/components/_headings.less
+++ b/src-front/less/components/_headings.less
@@ -22,3 +22,9 @@
   text-align: center;
   font-weight: bold;
 }
+
+.alert-heading {
+  .uppercase();
+  color: @alert-heading-c;
+  font-size: @alert-heading-f-s;
+}
