--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -40,6 +40,7 @@
           margin-right: .7em;
           display: inline-block;
           position: relative;
+          z-index: @mini-alert-zi;
 
           .notification-icon.active {
             color: @red;
