Doplneni prvku pro spravu do sablony pro moje soubory

--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -73,6 +73,7 @@
 @import "components/_links";
 @import "components/_school";
 @import "components/_control-bars";
+@import "components/_graphs";
 
 
 /*
