--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -96,6 +96,10 @@
 .calendar-i {
   .icon(@fa-var-calendar-alt, "d");
 }
+
+.close-i {
+  .icon(@fa-var-times, "r");
+}
 // END formulare
 
 // START uvodni stranka
