Oprava barev v LESS

--- a/src-front/less/layout/_alerts.less
+++ b/src-front/less/layout/_alerts.less
@@ -27,7 +27,7 @@
 // Muze byt i mimo .alert
 .alert-box {
   z-index: @alert-box-zi;
-  border: 2px solid @light-grey;
+  border: 2px solid @middle-grey;
   width: 80%;
 
   @media screen and (min-width: @tablet) and (max-width: @desktop - 1px) {
@@ -39,7 +39,7 @@
   }
 
   .alert-header {
-    background: @light-grey;
+    background: @middle-grey;
     padding: .3em 1em;
     position: relative;
     display: flex;
