--- a/src-front/less/layout/_content.less
+++ b/src-front/less/layout/_content.less
@@ -57,7 +57,7 @@
 .page {
   width: 90%;
   margin: 0 auto;
-  border: @page-b-w solid @light-grey;
+  border: @page-b-w solid @middle-grey;
   padding: @page-p;
   min-height: 30em;
 
