--- a/src-front/less/layout/_tables.less
+++ b/src-front/less/layout/_tables.less
@@ -25,7 +25,7 @@
   }
 
   td {
-    background: @light-grey;
+    background: @middle-grey;
 
     .cell-content {
       width: 4.3em;
@@ -105,7 +105,7 @@
     .content-row {
       display: flex;
       flex-wrap: wrap;
-      border-bottom: 2px solid @light-grey;
+      border-bottom: 2px solid @middle-grey;
       padding: 0;
 
       &:not(:first-of-type) {
@@ -118,7 +118,7 @@
       }
 
       .from, .author, .action {
-        background: @light-grey;
+        background: @middle-grey;
         padding-top: @box-row-p;
         padding-bottom: @box-row-p;
       }
@@ -233,7 +233,7 @@
     width: 100%;
 
     tr {
-      border-bottom: 2px solid @light-grey;
+      border-bottom: 2px solid @middle-grey;
 
       td {
         padding: .3em .5em .2em;
@@ -258,11 +258,11 @@
     }
 
     .date {
-      border-right: 2px solid @light-grey;
+      border-right: 2px solid @middle-grey;
     }
 
     .action {
-      border-left: 2px solid @light-grey;
+      border-left: 2px solid @middle-grey;
 
       .action-container {
         display: flex;
@@ -279,10 +279,10 @@
   width: 100%;
 
   .file-row {
-    border-bottom: 2px solid @light-grey;
+    border-bottom: 2px solid @middle-grey;
 
     &:first-child {
-      border-top: 2px solid @light-grey;
+      border-top: 2px solid @middle-grey;
     }
 
     td {
@@ -296,7 +296,7 @@
       }
 
       &.file-name {
-        border-right: 2px solid @light-grey;
+        border-right: 2px solid @middle-grey;
         padding-right: .5em;
       }
 
@@ -307,7 +307,7 @@
           display: table-cell;
           width: 5em;
           padding: 0 .5em;
-          border-right: 2px solid @light-grey;
+          border-right: 2px solid @middle-grey;
           white-space: nowrap;
 
           .action:not(:first-child) {
@@ -320,7 +320,7 @@
         padding: 0 .5em;
 
         &:not(:last-child) {
-          border-right: 2px solid @light-grey;
+          border-right: 2px solid @middle-grey;
         }
 
         .action-container {
@@ -345,7 +345,7 @@
     }
 
     &.file-name-typing {
-      border: 2px solid @light-grey;
+      border: 2px solid @middle-grey;
       background: @light-grey;
 
       .action,
