--- a/src-front/less/pages/_introduction.less
+++ b/src-front/less/pages/_introduction.less
@@ -54,7 +54,7 @@
 }
 
 .functions-section {
-  background: @light-grey;
+  background: @middle-grey;
   display: grid;
   grid-template-columns: 80%;
   justify-content: center;
