--- a/src-front/less/pages/_my-reminders-and-notes.less
+++ b/src-front/less/pages/_my-reminders-and-notes.less
@@ -15,7 +15,7 @@
       margin-top: 1em;
 
       .day-row {
-        border-top: @private-content-page-b-w solid @light-grey;
+        border-top: @private-content-page-b-w solid @middle-grey;
         padding: .5em 1em;
         display: flex;
 
@@ -33,7 +33,7 @@
             grid-template-columns: 2.5em 1.5em auto;
 
             &:not(:first-child) {
-              border-top: 2px solid @light-grey;
+              border-top: 2px solid @middle-grey;
               margin-top: .2em;
               padding-top: .2em;
             }
@@ -50,7 +50,7 @@
   .content-container {
     .content-row {
       &:not(:first-child) {
-        border-top: 2px solid @light-grey;
+        border-top: 2px solid @middle-grey;
         margin-top: .2em;
         padding-top: .2em;
       }
