--- a/src-front/less/pages/_summary.less
+++ b/src-front/less/pages/_summary.less
@@ -11,7 +11,7 @@
 
 // START spolecne
 .box {
-  border: 2px solid @light-grey;
+  border: 2px solid @middle-grey;
   padding: @box-p;
 
   &:not(:first-of-type) {
@@ -79,7 +79,7 @@
 // START muj obsah
 .my-content-section {
   margin-top: @page-top-bottom-p;
-  background: @light-grey;
+  background: @middle-grey;
   padding: @content-section-p @page-side-p;
 
   .box {
@@ -92,7 +92,7 @@
 
     .box-content {
       .content-row {
-        border-top: 2px solid @light-grey;
+        border-top: 2px solid @middle-grey;
         padding: @box-row-p;
       }
     }
