--- a/src-front/less/utils/vars/_color.less
+++ b/src-front/less/utils/vars/_color.less
@@ -5,7 +5,8 @@
 @middle-green: #A5BFBB;
 @light-green: #D4DDDD;
 @red: #F08693;
-@light-grey: #EEE9E5;
+@light-grey: #F8F7F7;
+@middle-grey: #EEE9E5;
 @dark-grey: #A7A5A6;
 @alert-background-color: #999999;
 @black: #5E5E5F;
@@ -15,7 +16,7 @@
 // START obecne
 @page-bg: @white;
 @text-c: @dark-grey;
-@placeholder-c: @light-grey;
+@placeholder-c: #CDCBCA;
 @link-c: @dark-green;
 // END obecne
 
@@ -29,10 +30,10 @@
 
 
 // START hlavicka
-@header-bg: @light-grey;
+@header-bg: @middle-grey;
 // END hlavicka
 
 
 // START paticka
-@footer-bg: @light-grey;
+@footer-bg: @middle-grey;
 // END paticka
