--- a/src-front/less/components/_buttons.less
+++ b/src-front/less/components/_buttons.less
@@ -15,14 +15,14 @@
 
 .form-button {
   &:extend(.button);
-  background: @light-grey;
+  background: @middle-grey;
 
   &:not(:first-child) {
     margin-left: 2em;
   }
 
   &:hover {
-    background: shade(@light-grey, 2%);
+    background: shade(@middle-grey, 2%);
   }
 
   &.secondary {
@@ -49,10 +49,10 @@
   }
 
   &.grey-bg {
-    background: @light-grey;
+    background: @middle-grey;
 
     &:hover {
-      background: shade(@light-grey, 2%);
+      background: shade(@middle-grey, 2%);
     }
   }
 }
