--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -54,7 +54,7 @@
               position: absolute;
               right: 0;
               border: 3px solid @dark-grey;
-              background: @light-grey;
+              background: @middle-grey;
               padding: .6em;
               margin-top: .4em;
               width: 12em;
