--- a/src-front/less/vendor-extensions/_datepickk.less
+++ b/src-front/less/vendor-extensions/_datepickk.less
@@ -68,13 +68,13 @@
   }
 
   .d-table {
-    background: @light-grey;
+    background: @middle-grey;
 
     input + label {
       margin: 0 .1em;
       flex-basis: calc((100% - 2 * 6 * .1em) / 7);
       color: @black;
-      border: 2px solid @light-grey;
+      border: 2px solid @middle-grey;
 
       &:nth-child(7n+0) {
         margin-right: 0;
