--- a/src/views/home.latte
+++ b/src/views/home.latte
@@ -1,3 +1,121 @@
-<h2>Homepage</h2>
+<section class="interactive-marketing-section first">
+    <object class="image-svg desktop _first-animate-block" data="img/presentation/introduction-first-interactive-image.svg" type="image/svg+xml"></object>
+    <object class="image-svg mobile _first-animate-block" data="img/presentation/introduction-first-interactive-image-mobile.svg" type="image/svg+xml"></object>
+</section>
 
-<p>You're on homepage now.</p>
+<section class="about-section">
+    <article class="project-info-article">
+        <header class="article-header">
+            <h2 class="introduction-heading">Moje Studium</h2>
+        </header>
+
+        <section class="article-section">
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec ex in neque
+                efficitur luctus. Donec vitae porttitor mauris. Phasellus ornare metus imperdiet sapien egestas, at
+                imperdiet ligula aliquet. Morbi eu rutrum dolor. Pellentesque habitant morbi tristique senectus et
+                netus et malesuada fames ac turpis egestas. Donec consectetur iaculis dolor, non ornare leo faucibus
+                scelerisque. Mauris malesuada varius eleifend. Nulla ullamcorper condimentum erat vel pretium.
+                Aliquam ornare et sem ut porttitor.</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec ex in neque
+                efficitur luctus. Donec vitae porttitor mauris. Phasellus ornare metus imperdiet sapien egestas, at
+                imperdiet ligula aliquet. Morbi eu rutrum dolor. Pellentesque habitant morbi tristique senectus et
+                netus et malesuada fames ac turpis egestas. Donec consectetur iaculis dolor, non ornare leo faucibus
+                scelerisque. Mauris malesuada varius eleifend. Nulla ullamcorper condimentum erat vel pretium.
+                Aliquam ornare et sem ut porttitor.</p>
+        </section>
+    </article>
+</section>
+
+<section class="functions-section">
+    <div class="background-light">
+        <object class="light-svg" data="img/presentation/light.svg" type="image/svg+xml"></object>
+    </div>
+
+    <article class="function-article">
+        <header class="article-header">
+            <div class="icon-container">
+                <i class="icon school-files-i"></i>
+            </div>
+
+            <h3 class="function-name">Ukládání a správa školních souborů</h3>
+        </header>
+
+        <section class="article-section">
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad at atque commodi cum, dolor fugiat
+                ipsam maxime minus mollitia repellat repudiandae suscipit unde. Eaque eos et fugit quasi sit
+                voluptas?
+            </p>
+        </section>
+    </article>
+
+    <article class="function-article">
+        <header class="article-header">
+            <div class="icon-container">
+                <i class="icon timetable-i"></i>
+            </div>
+
+            <h3 class="function-name">Vlastní přehledný rozvrh hodin</h3>
+        </header>
+
+        <section class="article-section">
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad at atque commodi cum, dolor fugiat
+                ipsam maxime minus mollitia repellat repudiandae suscipit unde. Eaque eos et fugit quasi sit
+                voluptas?
+            </p>
+        </section>
+    </article>
+
+    <article class="function-article">
+        <header class="article-header">
+            <div class="icon-container">
+                <i class="icon school-notes-i"></i>
+            </div>
+
+            <h3 class="function-name">Organizace školních poznámek</h3>
+        </header>
+
+        <section class="article-section">
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad at atque commodi cum, dolor fugiat
+                ipsam maxime minus mollitia repellat repudiandae suscipit unde. Eaque eos et fugit quasi sit
+                voluptas?
+            </p>
+        </section>
+    </article>
+
+    <article class="function-article">
+        <header class="article-header">
+            <div class="icon-container">
+                <i class="icon school-sharing-i"></i>
+            </div>
+
+            <h3 class="function-name">Sdílení souborů a poznámek mezi spolužáky</h3>
+        </header>
+
+        <section class="article-section">
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad at atque commodi cum, dolor fugiat
+                ipsam maxime minus mollitia repellat repudiandae suscipit unde. Eaque eos et fugit quasi sit
+                voluptas?
+            </p>
+        </section>
+    </article>
+</section>
+
+<section class="interactive-marketing-section">
+    <object class="image-svg desktop _second-animate-block" data="img/presentation/introduction-second-interactive-image.svg" type="image/svg+xml"></object>
+    <object class="image-svg mobile _second-animate-block" data="img/presentation/introduction-second-interactive-image-mobile.svg" type="image/svg+xml"></object>
+</section>
+
+<section class="register-section">
+    <div class="button-container">
+        <a href="#" class="link-button grey-bg" id="_register-button">Registrovat se</a>
+    </div>
+
+    <div class="smile-container">
+        <!-- Přepnout na třídu laugh-i -->
+        <i class="icon smile-i" id="_smile-icon"></i>
+    </div>
+</section>
