Priprava na prihlaseni pridana do systemu

--- a/src/views/User/register.latte
+++ b/src/views/User/register.latte
@@ -21,8 +21,8 @@
                         {*<i class="form-input-status positive"></i>*}
                     </div>
                     <div class="form-input-row">
-                        <label for="username" class="form-label">Přihlašovací jméno</label>
-                        <input name="username" type="text" id="username" class="form-input" autocomplete="nickname" required />
+                        <label for="nickname" class="form-label">Přezdívka</label>
+                        <input name="nickname" type="text" id="nickname" class="form-input" autocomplete="nickname" required />
                         {*<i class="form-input-status positive"></i>*}
                     </div>
                     <div class="form-input-row">
