--- a/src/views/Presentation/#layout.latte
+++ b/src/views/Presentation/#layout.latte
@@ -27,8 +27,8 @@
 
         <div class="other-content">
             <div class="not-logged-user-actions">
-                <a class="link-button" href="#">Přihlásit se</a>
-                <a class="link-button white-bg" href="#">Registrovat se</a>
+                <a class="link-button" href="/user/log/in">Přihlásit se</a>
+                <a class="link-button white-bg" href="/user/register">Registrovat se</a>
             </div>
         </div>
     </section>
