Priprava pro moje i sdilene upozorneni a poznamky pridana do systemu

--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -83,6 +83,9 @@
     </p>
 </footer>
 
+<!-- TODO: Pro aktivaci odebrat třídu hide -->
+<div class="alert-container hide"></div>
+
 {block js}{/block}
 </body>
 </html>
