--- a/src/views/Presentation/log-in.latte
+++ b/src/views/Presentation/log-in.latte
@@ -22,9 +22,8 @@
                     </div>
                 </div>
 
-                <div class="form-alerts">
-                    <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
-                    <p class="form-alert positive">Byli jste úspěšně přihlášeni.</p>
+                <div class="form-alerts" n:foreach="(array)$messages as $message">
+                    <p n:class="form-alert, $message['type']">{$message['text']}</p>
                 </div>
 
                 <div class="form-control">
