--- a/src/views/Presentation/#layout.latte
+++ b/src/views/Presentation/#layout.latte
@@ -26,10 +26,14 @@
         <h1 class="main-heading">Moje Studium</h1>
 
         <div class="other-content">
+            {if !isset($user)}
             <div class="not-logged-user-actions">
                 <a class="link-button" href="/log/in">Přihlásit se</a>
                 <a class="link-button white-bg" href="/register">Registrovat se</a>
             </div>
+            {else}
+                {* TODO: Content for logged in users *}
+            {/if}
         </div>
     </section>
 </header>
